hphp/hack/test/typecheck/assignment_sequencing/binop_ww.php
<?hh // strict

function x(int $y): string {
  $y = ($x = 'lol').($x = 'wut');
  return $x;
}
